Update source file en-US.json [ci skip]

--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -3772,6 +3772,13 @@
       "select": {
         "confirm_button": "Select"
       }
+    },
+    "modal": {
+      "delete_going_on_task": {
+        "title": "Delete this task?",
+        "delete": "Delete",
+        "cancel": "Cancel"
+      }
     }
   },
   "frame": {
