--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -2373,10 +2373,10 @@
           "submit_button_full_w": "Ορίστε αν το κουμπί υποβολή είναι πλήρες πλάτος.",
           "submit_button_text": "Ορίστε το κείμενο του κουμπιού υποβολή"
         },
-        "choose_image": "Επιλογή φακέλου και μεταφόρτωση",
+        "choose_image": "Επιλέξτε μια εικόνα",
         "choose_pdf": "Επιλέξτε ένα PDF",
         "choose_video": "Επιλέξτε ένα βίντεο",
-        "choose_audio": "Επιλογή φακέλου και μεταφόρτωση"
+        "choose_audio": "Επιλέξτε έναν ήχο"
       },
       "setter_tootip": {
         "volume": "Ένας αριθμός μεταξύ 0 και 1"
@@ -3771,6 +3771,11 @@
       },
       "select": {
         "confirm_button": "Επιλογή"
+      }
+    },
+    "drive_builder": {
+      "public_folder": {
+        "tips": "Η \"PublicAccess\" χρησιμοποιείται για την αποθήκευση αρχείων που μπορούν να προσπελαστούν δημόσια μέσω στοιχείων στον Κατασκευαστή. Η πρόσβαση αρχείων σε αυτόν τον φάκελο δεν απαιτεί έλεγχο ταυτότητας. Για να διασφαλίσετε την ασφάλεια των αρχείων, παρακαλώ μην αποθηκεύετε σημαντικά αρχεία εδώ."
       }
     }
   },
