--- a/apps/builder/src/i18n/locale/no-NO.json
+++ b/apps/builder/src/i18n/locale/no-NO.json
@@ -2373,10 +2373,10 @@
           "submit_button_full_w": "Angi om «Send inn»-knappen er full bredde.",
           "submit_button_text": "Angi teksten til «Send inn»-knappen"
         },
-        "choose_image": "Velg en mappe og last opp",
+        "choose_image": "Velg et bilde",
         "choose_pdf": "Velg en PDF",
         "choose_video": "Velg en video",
-        "choose_audio": "Velg en mappe og last opp"
+        "choose_audio": "Velg en lyd"
       },
       "setter_tootip": {
         "volume": "Et tall mellom 0 og 1"
@@ -3771,6 +3771,11 @@
       },
       "select": {
         "confirm_button": "Velg"
+      }
+    },
+    "drive_builder": {
+      "public_folder": {
+        "tips": "\"Offentlighetstilgangen\" brukes til å lagre filer som kan nås offentlig gjennom komponenter i byggeren. Tilgang til filer i denne mappen krever ikke godkjenning. For å sikre filsikkerhet, vennligst ikke lagre viktige filer her."
       }
     }
   },
