--- a/apps/builder/src/i18n/locale/ro-RO.json
+++ b/apps/builder/src/i18n/locale/ro-RO.json
@@ -2373,10 +2373,10 @@
           "submit_button_full_w": "Setaţi dacă butonul de adăugare are are lăţimea completă.",
           "submit_button_text": "Setaţi textul butonului de trimitere"
         },
-        "choose_image": "Selectați un dosar și încărcați",
+        "choose_image": "Alege o imagine",
         "choose_pdf": "Alege un PDF",
         "choose_video": "Alege un videoclip",
-        "choose_audio": "Selectați un dosar și încărcați"
+        "choose_audio": "Alegeți un fișier audio"
       },
       "setter_tootip": {
         "volume": "Un număr între 0 și 1"
@@ -3771,6 +3771,11 @@
       },
       "select": {
         "confirm_button": "Selectare"
+      }
+    },
+    "drive_builder": {
+      "public_folder": {
+        "tips": "\"Accesul public\" este folosit pentru a stoca fișiere care pot fi accesate public prin intermediul componentelor din Constructor. Accesarea fişierelor din acest dosar nu necesită autentificare. Pentru a asigura securitatea fişierelor, vă rugăm să nu păstraţi fişierele importante aici."
       }
     }
   },
