--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -2373,10 +2373,10 @@
           "submit_button_full_w": "Установка полной ширины кнопки Отправить.",
           "submit_button_text": "Задать текст кнопки Отправить"
         },
-        "choose_image": "Выберите папку и загрузите",
+        "choose_image": "Выберите изображение",
         "choose_pdf": "Выберите PDF",
         "choose_video": "Выберите видео",
-        "choose_audio": "Выберите папку и загрузите"
+        "choose_audio": "Выберите аудио"
       },
       "setter_tootip": {
         "volume": "Число между 0 и 1"
@@ -3771,6 +3771,11 @@
       },
       "select": {
         "confirm_button": "Выбрать"
+      }
+    },
+    "drive_builder": {
+      "public_folder": {
+        "tips": "\"PublicAccess\" используется для хранения файлов, которые могут быть публично доступны через компоненты в Builder. Доступ к файлам в этой папке не требует аутентификации. Для обеспечения безопасности файлов, пожалуйста, не храните важных файлов здесь."
       }
     }
   },
