--- a/apps/builder/src/i18n/locale/sv-SE.json
+++ b/apps/builder/src/i18n/locale/sv-SE.json
@@ -2373,10 +2373,10 @@
           "submit_button_full_w": "Ange om skicka knappen är fullbredd.",
           "submit_button_text": "Ställ in texten på inlämningsknappen"
         },
-        "choose_image": "Välj en mapp och ladda upp",
+        "choose_image": "Välj en bild",
         "choose_pdf": "Välj en PDF",
         "choose_video": "Välj en video",
-        "choose_audio": "Välj en mapp och ladda upp"
+        "choose_audio": "Välj ett ljud"
       },
       "setter_tootip": {
         "volume": "Ett tal mellan 0 och 1"
@@ -3771,6 +3771,11 @@
       },
       "select": {
         "confirm_button": "Välj"
+      }
+    },
+    "drive_builder": {
+      "public_folder": {
+        "tips": "\"PublicAccess\" används för att lagra filer som kan nås offentligt via komponenter i Builder. Att komma åt filer i den här mappen kräver inte autentisering. För att säkerställa filsäkerhet måste du inte lagra viktiga filer här."
       }
     }
   },
