--- a/apps/builder/src/i18n/locale/de-DE.json
+++ b/apps/builder/src/i18n/locale/de-DE.json
@@ -534,6 +534,12 @@
             },
             "ai-agent": {
               "value": "Wert"
+            },
+            "drive": {
+              "file_name": "illa.png",
+              "file_id": "{{drivePicker1.value[0].fileID}}",
+              "page": "{{0}}",
+              "limit": "{{20}} oder {{dataGrid1.pageSize}}"
             }
           },
           "option": {
@@ -626,6 +632,23 @@
               "create-resource": "Aus Ressource erstellen",
               "unsafe": "Unsicher",
               "safe": "Sicher"
+            },
+            "drive": {
+              "method": {
+                "list": "Liste",
+                "upload_file": "1 Datei hochladen",
+                "upload_multi_file": "Mehrere Dateien hochladen",
+                "download": "Download",
+                "download_multi_file": "Mehrere Dateien herunterladen",
+                "delete": "Lösche 1 Datei",
+                "delete_multi_file": "Mehrere Dateien löschen",
+                "update": "Datei umbenennen"
+              },
+              "file_type": {
+                "none": "Keine",
+                "by_id": "Nach ID",
+                "by_name": "Nach Name"
+              }
             }
           },
           "restapi": {
@@ -673,6 +696,15 @@
             },
             "general": {
               "safe_mode": "Wenn Sie den Safe Mode verwenden, kann Ihr SQL nur Variablen an der Stelle von Variablen referenzieren, zum Beispiel wo Name = '{{input1.value}}'. Dies hindert Benutzer daran, Ihre Datenbank zu kompromittieren, indem Anweisungen wie '; Drop Tabelle;' in input1 eingegeben werden. Wenn Sie den unsicheren Modus verwenden, können SQL-Syntaxwörter auch durch Variablen ersetzt werden zum Beispiel wo {{input1.value}} {{input2.value}} '{{input3.value}}'. In diesem Fall kann die Datenbank jedoch durch die vom Benutzer eingegebenen Inhalte kompromittiert werden. Es wird nicht empfohlen, diesen Modus zu verwenden."
+            },
+            "drive": {
+              "method": "Wird verwendet, um festzulegen, welche Aktionen Sie auf dem Laufwerk durchführen wollen.",
+              "filter_type": "Wenn Sie Dateien filtern möchten, können Sie mit dieser Konfigurationsoption die Filterung nach Dateinamen oder Datei-ID angeben. Dateiname verwendet unscharfe Übereinstimmung, während die Datei-ID exakte Übereinstimmung verwendet.",
+              "file_name": "Wird für verschwommene Dateien verwendet.",
+              "file_id": "Wird verwendet, um eine bestimmte Datei genau aufzulisten.",
+              "folder": "Wählen Sie einen zu bearbeitenden Ordner. ",
+              "page": "Wenn Sie serverseitige Seiten benötigen, können Sie mit dieser Konfigurationsoption die Seitenzahl der Daten festlegen. Dies ist ein Indexwert, der bei 0 beginnt.",
+              "limit": "Wenn Sie serverseitige Seiten benötigen, können Sie mit dieser Konfigurationsoption festlegen, wie viele Datenelemente pro Seite zurückgegeben werden sollen."
             }
           },
           "advanced": {
@@ -715,6 +747,15 @@
             "connect-data-source": "Mit Datenbank oder Api verbinden",
             "more-type": "Weitere Datenquellentypen",
             "safe_mode": "Modus"
+          },
+          "drive": {
+            "method": "Methode",
+            "filter_type": "Filtertyp",
+            "file_name": "Dateiname",
+            "file_id": "Datei-ID",
+            "folder": "Ordner",
+            "page": "Wenn Sie serverseitige Seiten benötigen, können Sie mit dieser Konfigurationsoption die Seitenzahl der Daten festlegen. Dies ist ein Indexwert, der bei 0 beginnt.",
+            "limit": "Limit"
           }
         },
         "menu": {
