--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -534,6 +534,12 @@
             },
             "ai-agent": {
               "value": "Τιμή"
+            },
+            "drive": {
+              "file_name": "illa.png",
+              "file_id": "{{drivePicker1.value[0].fileID}}",
+              "page": "{{0}} ή {{dataGrid1.page}}",
+              "limit": "{{20}} ή {{dataGrid1.pageSize}}"
             }
           },
           "option": {
@@ -626,6 +632,23 @@
               "create-resource": "Δημιουργία από πόρους",
               "unsafe": "Μη Ασφαλής",
               "safe": "Ασφαλές"
+            },
+            "drive": {
+              "method": {
+                "list": "Λίστα αρχείων",
+                "upload_file": "Ανεβάστε 1 αρχείο",
+                "upload_multi_file": "Μεταφόρτωση πολλαπλών αρχείων",
+                "download": "Λήψη",
+                "download_multi_file": "Λήψη πολλαπλών αρχείων",
+                "delete": "Διαγραφή 1 αρχείου",
+                "delete_multi_file": "Διαγραφή πολλαπλών αρχείων",
+                "update": "Μετονομασία αρχείου"
+              },
+              "file_type": {
+                "none": "Κανένα",
+                "by_id": "Κατά Ταυτότητα",
+                "by_name": "Κατά όνομα"
+              }
             }
           },
           "restapi": {
@@ -673,6 +696,15 @@
             },
             "general": {
               "safe_mode": "When using the safe mode, your SQL can only reference variables in the place of variables, for example, where name = '{{input1.value}}'. This prevents users from compromising your database by inputting statements like '; drop table;' in input1. When using the unsafe mode, SQL syntax words can also be replaced with variables, such as where {{input1.value}} {{input2.value}} '{{input3.value}}'. However, in this case, the database can be compromised by the content entered by the user. It is not recommended for you to use this mode."
+            },
+            "drive": {
+              "method": "Χρησιμοποιείται για να ορίσετε ποιες ενέργειες σκοπεύετε να εκτελέσετε στο δίσκο.",
+              "filter_type": "Αν θέλετε να φιλτράρετε αρχεία, μπορείτε να χρησιμοποιήσετε αυτήν την επιλογή ρύθμισης παραμέτρων για να καθορίσετε το φιλτράρισμα με βάση το όνομα του αρχείου ή το ID αρχείου. Το όνομα αρχείου χρησιμοποιεί ασαφή ταίριασμα, ενώ το ID αρχείου χρησιμοποιεί ακριβή ταίριασμα.",
+              "file_name": "Χρησιμοποιείται για ασαφή αρχεία που ταιριάζουν.",
+              "file_id": "Χρησιμοποιείται για την ακριβή εμφάνιση ενός συγκεκριμένου αρχείου.",
+              "folder": "Επιλέξτε ένα φάκελο για λειτουργία. ",
+              "page": "Αν χρειάζεστε σελιδοποίηση στο διακομιστή, μπορείτε να χρησιμοποιήσετε αυτήν την επιλογή ρύθμισης παραμέτρων για να ορίσετε τον αριθμό σελίδας των δεδομένων που θα ανακτηθούν. Αυτή είναι μια τιμή δείκτη που ξεκινά από 0.",
+              "limit": "Αν χρειάζεστε σελιδοποίηση διακομιστή, μπορείτε να χρησιμοποιήσετε αυτή την επιλογή ρύθμισης παραμέτρων για να ορίσετε τον αριθμό των στοιχείων δεδομένων που θα επιστραφούν ανά σελίδα."
             }
           },
           "advanced": {
@@ -715,6 +747,15 @@
             "connect-data-source": "Σύνδεση στη βάση δεδομένων ή στο api",
             "more-type": "Περισσότερος τύπος πηγών δεδομένων",
             "safe_mode": "Λειτουργία"
+          },
+          "drive": {
+            "method": "Μέθοδος",
+            "filter_type": "Τύπος φίλτρου",
+            "file_name": "Όνομα αρχείου",
+            "file_id": "Id Αρχείου",
+            "folder": "Φάκελος",
+            "page": "Σελίδα",
+            "limit": "Όριο"
           }
         },
         "menu": {
