--- a/apps/builder/src/i18n/locale/fi-FI.json
+++ b/apps/builder/src/i18n/locale/fi-FI.json
@@ -534,6 +534,12 @@
             },
             "ai-agent": {
               "value": "Arvo"
+            },
+            "drive": {
+              "file_name": "illa.png",
+              "file_id": "{{drivePicker1.value[0].fileID}}",
+              "page": "{{0}}",
+              "limit": "{{20}} or {{dataGrid1.pageSize}}"
             }
           },
           "option": {
@@ -626,6 +632,23 @@
               "create-resource": "Luo resurssista",
               "unsafe": "Epäturvallinen",
               "safe": "Turvallinen"
+            },
+            "drive": {
+              "method": {
+                "list": "Lista",
+                "upload_file": "Lataa 1 tiedosto",
+                "upload_multi_file": "Lataa useita tiedostoja",
+                "download": "Lataa",
+                "download_multi_file": "Lataa useita tiedostoja",
+                "delete": "Poista 1 tiedosto",
+                "delete_multi_file": "Poista useita tiedostoja",
+                "update": "Nimeä tiedosto uudelleen"
+              },
+              "file_type": {
+                "none": "Ei Mitään",
+                "by_id": "Tunnuksen Mukaan",
+                "by_name": "Nimen mukaan"
+              }
             }
           },
           "restapi": {
@@ -673,6 +696,15 @@
             },
             "general": {
               "safe_mode": "When using the safe mode, your SQL can only reference variables in the place of variables, for example, where name = '{{input1.value}}'. This prevents users from compromising your database by inputting statements like '; drop table;' in input1. When using the unsafe mode, SQL syntax words can also be replaced with variables, such as where {{input1.value}} {{input2.value}} '{{input3.value}}'. However, in this case, the database can be compromised by the content entered by the user. It is not recommended for you to use this mode."
+            },
+            "drive": {
+              "method": "Käytetään sen määrittämiseen, mitä toimintoja aiot suorittaa asemalla.",
+              "filter_type": "Jos haluat suodattaa tiedostoja, voit käyttää tätä asetusta määrittääksesi suodatuksen tiedoston nimen tai tiedoston tunnuksen mukaan. Tiedostonimi käyttää fuzzy matching, kun taas tiedoston ID käyttää tarkkaa täsmäämistä.",
+              "file_name": "Käytetään sumeisiin tiedostoihin.",
+              "file_id": "Käytetään tietyn tiedoston täsmälliseen luetteloon.",
+              "folder": "Valitse kansio jota haluat käyttää. ",
+              "page": "Jos tarvitset palvelimen puolella olevaa sivua, voit käyttää tätä asetusta asettaaksesi tietojen sivun numeron noutamaan. Tämä on indeksin arvo, joka alkaa 0.",
+              "limit": "Jos tarvitset palvelinpuolen välimuistin, voit käyttää tätä määritystä asettaaksesi tietoalkioiden määrän joka palautetaan per sivu."
             }
           },
           "advanced": {
@@ -715,6 +747,15 @@
             "connect-data-source": "Yhdistä tietokantaan tai apiin",
             "more-type": "Enemmän tietolähteitä",
             "safe_mode": "Tila"
+          },
+          "drive": {
+            "method": "Menetelmä",
+            "filter_type": "Suodattimen tyyppi",
+            "file_name": "Tiedoston nimi",
+            "file_id": "Tiedoston ID",
+            "folder": "Kansio",
+            "page": "Jos tarvitset palvelimen puolella olevaa sivua, voit käyttää tätä asetusta asettaaksesi tietojen sivun numeron noutamaan. Tämä on indeksin arvo, joka alkaa 0.",
+            "limit": "Raja"
           }
         },
         "menu": {
