--- a/apps/builder/src/i18n/locale/fr-FR.json
+++ b/apps/builder/src/i18n/locale/fr-FR.json
@@ -534,6 +534,12 @@
             },
             "ai-agent": {
               "value": "Valeur"
+            },
+            "drive": {
+              "file_name": "illa.png",
+              "file_id": "{{drivePicker1.value[0].fileID}}",
+              "page": "{{0}} or {{dataGrid1.page}}",
+              "limit": "{{20}} or {{dataGrid1.pageSize}}"
             }
           },
           "option": {
@@ -626,6 +632,23 @@
               "create-resource": "Create from resource",
               "unsafe": "Unsafe",
               "safe": "Safe"
+            },
+            "drive": {
+              "method": {
+                "list": "List files",
+                "upload_file": "Upload 1 file",
+                "upload_multi_file": "Upload multiple files",
+                "download": "Download 1 file",
+                "download_multi_file": "Download multiple files",
+                "delete": "Delete 1 file",
+                "delete_multi_file": "Delete multiple files",
+                "update": "Rename file"
+              },
+              "file_type": {
+                "none": "None",
+                "by_id": "By ID",
+                "by_name": "By name"
+              }
             }
           },
           "restapi": {
@@ -673,6 +696,15 @@
             },
             "general": {
               "safe_mode": "When using the safe mode, your SQL can only reference variables in the place of variables, for example, where name = '{{input1.value}}'. This prevents users from compromising your database by inputting statements like '; drop table;' in input1. When using the unsafe mode, SQL syntax words can also be replaced with variables, such as where {{input1.value}} {{input2.value}} '{{input3.value}}'. However, in this case, the database can be compromised by the content entered by the user. It is not recommended for you to use this mode."
+            },
+            "drive": {
+              "method": "Used to set what actions you plan to perform on the drive.",
+              "filter_type": "If you want to filter files, you can use this configuration option to specify filtering by file name or file ID. File name uses fuzzy matching, while file ID uses exact matching.",
+              "file_name": "Used for fuzzy matching files.",
+              "file_id": "Used to accurately list a specific file.",
+              "folder": "Select a folder to operate. ",
+              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. This is an index value that starts from 0.",
+              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page."
             }
           },
           "advanced": {
@@ -715,6 +747,15 @@
             "connect-data-source": "Connect to database or api",
             "more-type": "More type of data sources",
             "safe_mode": "Mode"
+          },
+          "drive": {
+            "method": "Method",
+            "filter_type": "Filter type",
+            "file_name": "File name",
+            "file_id": "File ID",
+            "folder": "Folder",
+            "page": "Page",
+            "limit": "Limit"
           }
         },
         "menu": {
