--- a/apps/builder/src/i18n/locale/zh-CN.json
+++ b/apps/builder/src/i18n/locale/zh-CN.json
@@ -534,6 +534,12 @@
             },
             "ai-agent": {
               "value": "值"
+            },
+            "drive": {
+              "file_name": "illa.png",
+              "file_id": "{{drivePicker1.value[0].fileID}}",
+              "page": "{{0}} or {{dataGrid1.page}}",
+              "limit": "{{20}} or {{dataGrid1.pageSize}}"
             }
           },
           "option": {
@@ -626,6 +632,23 @@
               "create-resource": "从数据源创建",
               "unsafe": "不安全",
               "safe": "安全"
+            },
+            "drive": {
+              "method": {
+                "list": "List files",
+                "upload_file": "Upload 1 file",
+                "upload_multi_file": "Upload multiple files",
+                "download": "Download 1 file",
+                "download_multi_file": "Download multiple files",
+                "delete": "Delete 1 file",
+                "delete_multi_file": "Delete multiple files",
+                "update": "Rename file"
+              },
+              "file_type": {
+                "none": "None",
+                "by_id": "By ID",
+                "by_name": "By name"
+              }
             }
           },
           "restapi": {
@@ -673,6 +696,15 @@
             },
             "general": {
               "safe_mode": "使用safe模式时，您的SQL只能在变量的位置引用变量，例如where name = '{{input1.value}}'。这使得使用者无法通过在input1中输入 ; drop table; 等方式来破坏您的数据库；使用Unsafe模式时，SQL语法词也可以替换为变量，如where {{input1.value}} {{input2.value}} '{{input3.value}}'，但这样一来数据库可能被用户输入的内容破坏，不建议您使用"
+            },
+            "drive": {
+              "method": "Used to set what actions you plan to perform on the drive.",
+              "filter_type": "If you want to filter files, you can use this configuration option to specify filtering by file name or file ID. File name uses fuzzy matching, while file ID uses exact matching.",
+              "file_name": "Used for fuzzy matching files.",
+              "file_id": "Used to accurately list a specific file.",
+              "folder": "Select a folder to operate. ",
+              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. This is an index value that starts from 0.",
+              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page."
             }
           },
           "advanced": {
@@ -715,6 +747,15 @@
             "connect-data-source": "连接到数据库或API",
             "more-type": "更多连接方式",
             "safe_mode": "模式"
+          },
+          "drive": {
+            "method": "Method",
+            "filter_type": "Filter type",
+            "file_name": "File name",
+            "file_id": "File ID",
+            "folder": "Folder",
+            "page": "Page",
+            "limit": "Limit"
           }
         },
         "menu": {
