--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -539,8 +539,13 @@
               "file_name": "illa.png",
               "file_id": "{{drivePicker1.value[0].fileID}}",
               "page": "{{0}} or {{dataGrid1.page}}",
-              "limit": "{{20}} or {{dataGrid1.pageSize}}"
-            }
+              "limit": "{{20}} or {{dataGrid1.pageSize}}",
+              "file_name_array": "{{upload1.files.map(file => file.name)}}",
+              "file_data_array": "{{upload1.value}}",
+              "file_ids": "{{[\"id1\",\"id2\"]}} or {{drivePicker1.value.map(file => fileID)}}",
+              "target_file_name": "new_file.csv"
+            },
+            "file_type_array": "{{[\"png\", \"jpg\", \"csv\"]}} or {{upload1.files.map(file =>file.type)}}"
           },
           "option": {
             "couchdb": {
@@ -704,7 +709,12 @@
               "file_id": "Used to accurately list a specific file.",
               "folder": "Select a folder to operate. ",
               "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. This is an index value that starts from 0.",
-              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page."
+              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page.",
+              "file_name_array": "An array consisting of the names of the files you want to upload, including the file extensions, such as [file1.csv, file2.csv]. You can directly retrieve this value using the upload component, like {{upload1.files.map(file => file.name)}}.",
+              "file_data_array": "An array of the data of the files you want to upload. You can get it via {{upload1.value}}.",
+              "file_ids": "An array of file IDs that you want to download. You can retrieve this value from the Drive Picker component using {{drivePicker1.value.map(file => fileID)}}, or you can obtain it through the list method.",
+              "file_type_array": "An array of type of the files to be uploaded. You can use {{upload1.files.map(file =>file.type)}} to get the file types from upload component. ",
+              "target_file_name": "Used to set the new name"
             }
           },
           "advanced": {
@@ -755,7 +765,12 @@
             "file_id": "File ID",
             "folder": "Folder",
             "page": "Page",
-            "limit": "Limit"
+            "limit": "Limit",
+            "file_name_array": "File name array",
+            "file_data_array": "File data array",
+            "file_ids": "File ID array",
+            "file_type_array": "File type array",
+            "target_file_name": "New name with extension"
           }
         },
         "menu": {
@@ -2004,6 +2019,14 @@
         "click_mask_close": "Click mask to close modal",
         "modal": {
           "blank": "No icons"
+        },
+        "placeholder": {
+          "file_download": {
+            "file_name": "file.csv or {{upload1.files[0].name}}"
+          },
+          "drive_builder": {
+            "fileData": "{{upload1.value[0]}}"
+          }
         }
       },
       "setter_tips": {
@@ -2021,7 +2044,8 @@
           "data_source": "A data source to define image items using mapped evaluation. Use either an array of values or an object of keys mapped to arrays. For example: {{[{ x:1, y:1 },{ x:2, y:2 },...]}} . You can also use the data in actions. For example: {{ mysql1.data }} "
         },
         "file_download": {
-          "file_data": "Support base64 data, raw data, mapped data of table. "
+          "file_data": "Support base64 data, raw data, mapped data of table. ",
+          "file_name": "The name of the file you want to upload, including the file extension, such as file.csv. You can get this value using the upload component, like {{upload1.files[0].name}}. "
         },
         "variable": {
           "available_in_objects": "Available in objects and arrays. The path of the attribute in the object: {{objectName.attributeName}}. The index of the value in an array: {{1}}. An array in the object: {{objectName.attributeName.1}}",
