--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -538,7 +538,7 @@
             "drive": {
               "file_name": "illa.png",
               "file_id": "{{drivePicker1.value[0].fileID}}",
-              "page": "{{0}} or {{dataGrid1.page}}",
+              "page": "{{1}} or {{dataGrid1.page}}",
               "limit": "{{20}} or {{dataGrid1.pageSize}}",
               "file_name_array": "{{upload1.files.map(file => file.name)}}",
               "file_data_array": "{{upload1.value}}",
@@ -708,7 +708,7 @@
               "file_name": "Used for fuzzy matching files.",
               "file_id": "Used to accurately list a specific file.",
               "folder": "Select a folder to operate. ",
-              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. This is an index value that starts from 0.",
+              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. It starts from 1.",
               "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page.",
               "file_name_array": "An array consisting of the names of the files you want to upload, including the file extensions, such as [file1.csv, file2.csv]. You can directly retrieve this value using the upload component, like {{upload1.files.map(file => file.name)}}.",
               "file_data_array": "An array of the data of the files you want to upload. You can get it via {{upload1.value}}.",
