--- a/apps/builder/src/i18n/locale/it-IT.json
+++ b/apps/builder/src/i18n/locale/it-IT.json
@@ -538,9 +538,14 @@
             "drive": {
               "file_name": "illa.png",
               "file_id": "{{drivePicker1.value[0].fileID}}",
-              "page": "{{0}} or {{dataGrid1.page}}",
-              "limit": "{{20}} or {{dataGrid1.pageSize}}"
-            }
+              "page": "{{1}} or {{dataGrid1.page}}",
+              "limit": "{{20}} or {{dataGrid1.pageSize}}",
+              "file_name_array": "{{upload1.files.map(file => file.name)}}",
+              "file_data_array": "{{upload1.value}}",
+              "file_ids": "{{[\"id1\",\"id2\"]}} or {{drivePicker1.value.map(file => fileID)}}",
+              "target_file_name": "new_file.csv"
+            },
+            "file_type_array": "{{[\"png\", \"jpg\", \"csv\"]}} or {{upload1.files.map(file =>file.type)}}"
           },
           "option": {
             "couchdb": {
@@ -703,8 +708,13 @@
               "file_name": "Used for fuzzy matching files.",
               "file_id": "Used to accurately list a specific file.",
               "folder": "Select a folder to operate. ",
-              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. This is an index value that starts from 0.",
-              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page."
+              "page": "If you need server-side pagination, you can use this configuration option to set the page number of the data to retrieve. It starts from 1.",
+              "limit": "If you need server-side pagination, you can use this configuration option to set the number of data items to be returned per page.",
+              "file_name_array": "An array consisting of the names of the files you want to upload, including the file extensions, such as [file1.csv, file2.csv]. You can directly retrieve this value using the upload component, like {{upload1.files.map(file => file.name)}}.",
+              "file_data_array": "An array of the data of the files you want to upload. You can get it via {{upload1.value}}.",
+              "file_ids": "An array of file IDs that you want to download. You can retrieve this value from the Drive Picker component using {{drivePicker1.value.map(file => fileID)}}, or you can obtain it through the list method.",
+              "file_type_array": "An array of type of the files to be uploaded. You can use {{upload1.files.map(file =>file.type)}} to get the file types from upload component. ",
+              "target_file_name": "Used to set the new name"
             }
           },
           "advanced": {
@@ -755,7 +765,12 @@
             "file_id": "File ID",
             "folder": "Folder",
             "page": "Page",
-            "limit": "Limit"
+            "limit": "Limit",
+            "file_name_array": "File name array",
+            "file_data_array": "File data array",
+            "file_ids": "File ID array",
+            "file_type_array": "File type array",
+            "target_file_name": "New name with extension"
           }
         },
         "menu": {
@@ -2004,6 +2019,14 @@
         "click_mask_close": "Fare clic su maschera per chiudere il modal",
         "modal": {
           "blank": "Nessuna icona"
+        },
+        "placeholder": {
+          "file_download": {
+            "file_name": "file.csv or {{upload1.files[0].name}}"
+          },
+          "drive_builder": {
+            "fileData": "{{upload1.value[0]}}"
+          }
         }
       },
       "setter_tips": {
@@ -2021,7 +2044,9 @@
           "data_source": "Una sorgente dati per definire gli elementi dell'immagine usando la valutazione mappata. Usa un insieme di valori o un oggetto di chiavi mappate agli array. Per esempio: {{[{ x:1, y:1 },{ x:2, y:2 },...]}} . Puoi anche usare i dati nelle azioni. Per esempio: {{ mysql1.data }} "
         },
         "file_download": {
-          "file_data": "Supporta dati base64, dati grezzi, dati mappati della tabella. "
+          "file_data": "Supporta dati base64, dati grezzi, dati mappati della tabella. ",
+          "file_name": "The name of the file you want to upload, including the file extension, such as file.csv. You can get this value using the upload component, like {{upload1.files[0].name}}. ",
+          "file_type": "The type of the file to be uploaded"
         },
         "variable": {
           "available_in_objects": "Disponibile negli oggetti e negli array. Il percorso dell'attributo nell'oggetto: {{objectName.attributeName}}. L'indice del valore in un array: {{1}}. Un array nell'oggetto: {{objectName.attributeName.1}}",
