Update source file en-US.json [ci skip]

--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -805,7 +805,8 @@
           },
           "trigger": {
             "manually": "Run action only when manually triggered",
-            "on_change": "Run action automatically when inputs change"
+            "on_change": "Run action automatically when inputs change",
+            "label": "Trigger type"
           }
         },
         "s3": {
