--- a/apps/builder/src/i18n/locale/zh-CN.json
+++ b/apps/builder/src/i18n/locale/zh-CN.json
@@ -757,7 +757,9 @@
           "general": {
             "connect-data-source": "连接到数据库或API",
             "more-type": "更多连接方式",
-            "safe_mode": "模式"
+            "safe_mode": "模式",
+            "ai_agent_title": "集成AI Agent",
+            "integration_title": "集成数据源"
           },
           "drive": {
             "method": "方法",
@@ -803,7 +805,16 @@
           },
           "trigger": {
             "manually": "手动触发时执行",
-            "on_change": "当输入更改时自动执行"
+            "on_change": "当输入更改时自动执行",
+            "label": "触发类型"
+          },
+          "mock": {
+            "label": "模拟",
+            "data_label": "数据",
+            "data_production": "生产数据",
+            "data_mock": "模拟数据",
+            "json": "模拟JSON输出",
+            "on_deploy": "在部署应用上也使用模拟JSON输出"
           }
         },
         "s3": {
@@ -3840,7 +3851,8 @@
         "select": "选择"
       },
       "select": {
-        "confirm_button": "选择"
+        "confirm_button": "选择",
+        "select_entry": "选择"
       }
     },
     "drive_builder": {
@@ -4623,7 +4635,8 @@
     "update_modal": {
       "button": "更新",
       "title": "编辑"
-    }
+    },
+    "checkbox_ai_agent": "将关联的AI Agent同步到Marketplace"
   },
   "error_page": {
     "fobidden": "没有访问权限"
